--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "noImplicitAny": false,
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "types": []
